Pushing images and such into directories

--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
         <main  class="homeMain">
             <div>
                 <button class="projectButton" id="projectButtonLeftTop" onclick="window.location.href='trilingual.html';">
-                    <img src="TrilingualMainCapsule.png" class="projectImage" alt="Image of friendly cucumber looking alien creatures at a market">
+                    <img src="Images/Trilingual/TrilingualMainCapsule.png" class="projectImage" alt="Image of friendly cucumber looking alien creatures at a market">
                     <span class="projectButtonText"><b><u>Trilingual</u></b></span>
                 </button>
             </div>
 
             <div>
                 <button class="projectButton" id="projectButtonTopRight" onclick="window.location.href='potion.html';">
-                    <img src="PotionMainCapsule.png" class="projectImage" alt="Image of broken bridge across water and rocks with various enemies">
+                    <img src="Images/Potion/PotionMainCapsule.png" class="projectImage" alt="Image of broken bridge across water and rocks with various enemies">
                     <span class="projectButtonText"><b><u>Potion Seller</u></b></span>
                 </button>
             </div>
 
             <div>
                 <button class="projectButton" id="projectButtonBottomMiddle" onclick="window.location.href='wip.html';">
-                    <img src="WIPMainCapsule.png" class="projectImage" alt="Image of concept art of game with character and raylib graphics library icon">
+                    <img src="Images/WIP/WIPMainCapsule.png" class="projectImage" alt="Image of concept art of game with character and raylib graphics library icon">
                     <span class="projectButtonText"><b><u>Current WIP</u></b></span>
                 </button>
             </div>
