--- a/potion.html
+++ b/potion.html
@@ -35,7 +35,7 @@
 
             <div class="centerDiv">
                 <h1>Potion Seller</h1>
-                <video loop muted autoplay playsinline class="DemoVid"><source src="PotionDemo.mp4"></video>
+                <video loop muted autoplay playsinline class="DemoVid"><source src="Videos/Potion/PotionDemo.mp4"></video>
             </div>
 
             <div class="floatParent">
@@ -78,11 +78,11 @@
 
             <div class="floatParent" style="text-align:center">
                 <div class="floatChild">
-                    <video loop muted autoplay playsinline class="refVid"><source src="IceSpikeFlat.mp4"></video>
+                    <video loop muted autoplay playsinline class="refVid"><source src="Videos/Potion/IceSpikeFlat.mp4"></video>
                 </div>
 
                 <div class="floatChild">
-                    <video loop muted autoplay playsinline class="refVid"><source src="IceSpikeHorizontal.mp4"></video>
+                    <video loop muted autoplay playsinline class="refVid"><source src="Videos/Potion/IceSpikeHorizontal.mp4"></video>
                 </div>
             </div>
 
@@ -111,7 +111,7 @@
             <div class="centerDiv"><h3>Camera System</h3></div>
 
             <div class="centerDiv">
-                <video loop muted autoplay playsinline class="refVid"><source src="CameraMovingPres.mp4"></video>
+                <video loop muted autoplay playsinline class="refVid"><source src="Videos/Potion/CameraMovingPres.mp4"></video>
                 <p>
                     Another system I was in charge of was our camera system.
                     This system worked by constantly getting the player's location and following
@@ -124,7 +124,7 @@
 
             <div class="floatParent" style="text-align:center">
                 <div class="floatChild">
-                    <img src="CameraDetailsPanel.png" class="refVid" alt="Image of Unreal Engine's details panel for the camera system with various exposed elements">
+                    <img src="Images/Potion/CameraDetailsPanel.png" class="refVid" alt="Image of Unreal Engine's details panel for the camera system with various exposed elements">
                 </div>
                 <div class="floatChild" style="text-align:left; padding-top:40px">
                     <p>
@@ -147,7 +147,7 @@
                     </p>
                 </div>
                 <div class="floatChild">
-                    <video loop muted autoplay playsinline class="refVid"><source src="LockedCameraPres.mp4"></video>
+                    <video loop muted autoplay playsinline class="refVid"><source src="Videos/Potion/LockedCameraPres.mp4"></video>
                 </div>
             </div>
 
@@ -174,7 +174,7 @@
                     </p>
                 </div>
                 <div class="floatChild" style="padding-top:50px;">
-                    <video loop muted autoplay playsinline class="refVid"><source src="DemonBirdV2.mp4"></video>
+                    <video loop muted autoplay playsinline class="refVid"><source src="Videos/Potion/DemonBirdV2.mp4"></video>
                 </div>
             </div>
 
@@ -182,7 +182,7 @@
 
             <div class="floatParent">
                 <div class="floatChild" style="padding-top:60px">
-                    <video loop muted autoplay playsinline class="refVid"><source src="Goblin.mp4"></video>
+                    <video loop muted autoplay playsinline class="refVid"><source src="Videos/Potion/Goblin.mp4"></video>
                 </div>
                 <div class="floatChild">
                     <p>
