--- a/trilingual.html
+++ b/trilingual.html
@@ -36,7 +36,7 @@
 
             <div class="centerDiv">
                 <h1>Trilingual</h1>
-                <video loop muted autoplay playsinline class="DemoVid"><source src="TriDemoVid.mp4"></video>
+                <video loop muted autoplay playsinline class="DemoVid"><source src="Videos/Trilingual/TriDemoVid.mp4"></video>
             </div>
 
 
@@ -105,8 +105,8 @@
             <div class="centerDiv"><h3>Pre-Production</h3></div>
 
             <div class="floatParent" style="text-align:center">
-                <div class="floatChild"><video loop muted autoplay playsinline class="refVid"><source src="ProtoGifTri.mp4"></video></div>
-                <div class="floatChild"><video loop muted autoplay playsinline class="refVid"><source src="COSRef.mp4"></video></div>
+                <div class="floatChild"><video loop muted autoplay playsinline class="refVid"><source src="Videos/Trilingual/ProtoGifTri.mp4"></video></div>
+                <div class="floatChild"><video loop muted autoplay playsinline class="refVid"><source src="Videos/Trilingual/COSRef.mp4"></video></div>
             </div>
 
             <div class="centerDiv">
@@ -131,7 +131,7 @@
 
             <div class="floatParent" style="text-align:center">
                 <div class="floatChild">
-                    <img src="Tri_01.jpg" class="refVid" alt="Paper diagram of the levels of communication between objects in the game">
+                    <img src="Images/Trilingual/Tri_01.jpg" class="refVid" alt="Paper diagram of the levels of communication between objects in the game">
                 </div>
                 <div class="floatChild">
                     <p style="padding-top:50px; text-align:left">
@@ -155,7 +155,7 @@
                     </p>
                 </div>
                 <div class="floatChild">
-                    <img src="TriCollage.png" class="collageImage" alt="Collage of paper prototypes for puzzle mechanics">
+                    <img src="Images/Trilingual/TriCollage.png" class="collageImage" alt="Collage of paper prototypes for puzzle mechanics">
                 </div>
             </div>
 
@@ -177,7 +177,7 @@
 
             <div class="floatParent" style="text-align:center">
                 <div class="floatChild">
-                    <video loop muted autoplay playsinline class="refVid"><source src="TriGif_01.mp4"></video>
+                    <video loop muted autoplay playsinline class="refVid"><source src="Videos/Trilingual/TriGif_01.mp4"></video>
                 </div>
                 <div class="floatChild">
                     <p style="text-align:left; padding-top:40px;">
@@ -200,7 +200,7 @@
                     </p>
                 </div>
                 <div class="floatChild">
-                    <img src="TileDetails.png" class="refVid" alt="Details panel in Unreal Engine displaying the 2D structs with XY Coordinate system">
+                    <img src="Images/Trilingual/TileDetails.png" class="refVid" alt="Details panel in Unreal Engine displaying the 2D structs with XY Coordinate system">
                 </div>
             </div>
 
@@ -208,7 +208,7 @@
 
             <div class="floatParent" style="text-align:center">
                 <div class="floatChild">
-                    <img src="DrawTile.png" class="refVid" alt="Image of a square in Unreal Engine blueprint editor representing a tile">
+                    <img src="Images/Trilingual/DrawTile.png" class="refVid" alt="Image of a square in Unreal Engine blueprint editor representing a tile">
                 </div>
                 <div class="floatChild">
                     <p style="text-align:left; padding-top:40px;">
@@ -226,11 +226,11 @@
 
             <div class="floatParent" style="text-align:center">
                 <div class="floatChild" style="padding:20px">
-                    <video loop muted autoplay playsinline class="refVid"><source src="ScanningEx.mp4"></video>
+                    <video loop muted autoplay playsinline class="refVid"><source src="Videos/Trilingual/ScanningEx.mp4"></video>
                     <p>Decoding starts in the player. Here it's recognized if the item scanned was a rune.</p>
                 </div>
                 <div class="floatChild" style="padding:20px">
-                    <img src="Brain.png" class="refVid" alt="Image of the gamemode displaying all of the words in the Thesaurus">
+                    <img src="Images/Trilingual/Brain.png" class="refVid" alt="Image of the gamemode displaying all of the words in the Thesaurus">
                     <p>I utilized the gamemode to be the main brain of the operation. Once scanned, the run reports it's value and transmits it's data to the gamemode.</p>
                 </div>
             </div>
@@ -239,13 +239,13 @@
 
             <div class="floatParent" style="text-align:center">
                 <div class="floatChild" style="padding:20px">
-                    <img src="HUDReport.png" class="refVid" alt="Image of the Unreal Engine blueprint editor of nodes in the HUD blueprint">
+                    <img src="Images/Trilingual/HUDReport.png" class="refVid" alt="Image of the Unreal Engine blueprint editor of nodes in the HUD blueprint">
                     <p>The gamemode would then report the proper information to the HUD
                         where the menu for guessing would appear.
                     </p>
                 </div>
                 <div class="floatChild" style="padding:20px">
-                    <img src="Comparison.png" class="refVid" alt="An image of the comaparison operation where the input word is compared to the thesaurus">
+                    <img src="Images/Trilingual/Comparison.png" class="refVid" alt="An image of the comaparison operation where the input word is compared to the thesaurus">
                     <p>
                         After inputting a guess, it's sent back to the gamemode for proper
                         evaluation which would result in further communications depending on this
