--- a/wip.html
+++ b/wip.html
@@ -33,7 +33,7 @@
         <main>
             <div class="centerDiv"><h3>Project Submarine</h3></div>
             <div class="centerDiv">
-                <video loop muted autoplay playsinline class="DemoVid"><source src="SubDemo.mp4"></video>
+                <video loop muted autoplay playsinline class="DemoVid"><source src="Videos/WIP/SubDemo.mp4"></video>
             </div>
 
             <div class="floatParent">
@@ -96,7 +96,7 @@
                 <div class="floatChild">
                     <a href="https://www.instagram.com/shea_arts12?utm_source=qr" target="_blank">
                         <figure>
-                            <img src="SubImage01.png" class="tallImageRef" alt="Concept art image of the game with a little dude on the side">
+                            <img src="Images/WIP/SubImage01.png" class="tallImageRef" alt="Concept art image of the game with a little dude on the side">
                             <figcaption id="textColorPink">Concept art courtesy of <b>Michael Mcleod</b></figcaption>
                         </figure>
                     </a>
@@ -143,10 +143,10 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="VSCode.png" class="d-block w-100" alt="Image of C code inside of Visual Studio Code">
+                                <img src="Images/WIP/VSCode.png" class="d-block w-100" alt="Image of C code inside of Visual Studio Code">
                             </div>
                             <div class="carousel-item">
-                                <img src="RaylibImg.png" class="d-block w-100" alt="Image of the current state of the game using Raylib">
+                                <img src="Images/WIP/RaylibImg.png" class="d-block w-100" alt="Image of the current state of the game using Raylib">
                             </div>
                         </div>
                     </div>
