Added padding to potion page section

--- a/potion.html
+++ b/potion.html
@@ -112,7 +112,7 @@
 
             <div class="centerDiv">
                 <video loop muted autoplay playsinline class="refVid"><source src="Videos/Potion/CameraMovingPres.mp4"></video>
-                <p>
+                <p  style="padding-top:15px">
                     Another system I was in charge of was our camera system.
                     This system worked by constantly getting the player's location and following
                     it along the x and z-axis. To make it feel more juicy, camera lag was introduced via
