Fixed corrupted Trilingual Demo Video

--- a/trilingual.html
+++ b/trilingual.html
@@ -36,7 +36,7 @@
 
             <div class="centerDiv">
                 <h1>Trilingual</h1>
-                <video loop muted autoplay playsinline class="DemoVid"><source src="Videos/Trilingual/TriDemoVid.mp4"></video>
+                <video loop muted autoplay playsinline preload="auto" class="DemoVid"><source src="Videos/Trilingual/TriDemoVid.mp4"></video>
             </div>
 
 
