Small update to WIP page

--- a/wip.html
+++ b/wip.html
@@ -136,7 +136,8 @@
                         <li>Develop C code using GCC, Visual Studio Code and Raylib Graphics Library</li>
                         <li>Develop a personalized camera system</li>
                         <li>Develop collision system and collision response code</li>
-                        <li>Design as short game with a simple mechanic to be implemented</li>
+                        <li>Create a workflow for loading and unloading models from render</li>
+                        <li>Design a short game with a simple mechanic to be implemented</li>
                     </ul>
                 </div>
                 <div class="floatChild" style="padding: 10px;">
