Reogranized WIP and Home page

--- a/wip.html
+++ b/wip.html
@@ -50,7 +50,7 @@
                     <p>In this project, I am utilizing the GCC compiler along with Visual Studio
                         Code and Raylib Graphics Library to develop a game using my own proprietary
                         source code. The goal of this project is to learn the in depth development
-                        of games without the use of a premade engine.
+                        of games without the use of a commerical engine.
                     </p>
                 </div>
             </div>
@@ -66,7 +66,8 @@
                         <li>Develop a personalized camera system</li>
                         <li>Develop collision system and collision response code</li>
                         <li>Create a workflow for loading and unloading models from render</li>
-                        <li>Design a short game with a simple mechanic to be implemented</li>
+                        <li>Develop an interaction system using a custom collision based raycast</li>
+                        <li>Design and develop button selection puzzle mechanic</li>
                     </ul>
                 </div>
                 
