--- a/index.html
+++ b/index.html
@@ -42,16 +42,17 @@
             </div>
 
             <div>
-                <button class="projectButton" id="projectButtonTopRight" onclick="window.location.href='potion.html';">
-                    <img src="Images/Potion/PotionMainCapsule.png" class="projectImage" alt="Image of broken bridge across water and rocks with various enemies">
-                    <span class="projectButtonText"><b><u>Potion Seller</u></b></span>
+                <button class="projectButton" id="projectButtonTopRight" onclick="window.location.href='wip.html';">
+                    <img src="Images/WIP/WIPMainCapsule.png" class="projectImage" alt="Image of concept art of game with character and raylib graphics library icon">
+                    <span class="projectButtonText"><b><u>Current WIP</u></b></span>
+                    
                 </button>
             </div>
 
             <div>
-                <button class="projectButton" id="projectButtonBottomMiddle" onclick="window.location.href='wip.html';">
-                    <img src="Images/WIP/WIPMainCapsule.png" class="projectImage" alt="Image of concept art of game with character and raylib graphics library icon">
-                    <span class="projectButtonText"><b><u>Current WIP</u></b></span>
+                <button class="projectButton" id="projectButtonBottomMiddle" onclick="window.location.href='potion.html';">
+                    <img src="Images/Potion/PotionMainCapsule.png" class="projectImage" alt="Image of broken bridge across water and rocks with various enemies">
+                    <span class="projectButtonText"><b><u>Potion Seller</u></b></span>
                 </button>
             </div>
         </main>
