Small touches before HOF
Making some small adjustments to WIP page and some even smaller ones to the rest of the pages (headers and such needed updating)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 id="textColorPink"><b>Aaron Brey</b></h1>
                 <h1 id="textColorOffWhite">Technical Designer</h1>
                 <a href="https://www.linkedin.com/in/aaron-brey-282231279/" target="_blank"><img src="in.png" width="25" height="25"  alt="Image of Linkedin Logo"></a>
-                <a href="abrey2o3@gmail.com" target="_blank"><img src="mail.png" width="35" height="25" alt="Image of universal email logo"></a>
+                <a href="mailto: abrey2o3@gmail.com" target="_blank"><img src="mail.png" width="35" height="25" alt="Image of universal email logo"></a>
                 <a href="https://github.com/4ullstop" target="_blank"><img src="gitImg.png" width="25" height="25" alt="Image of GitHub Logo"></a>
             </div>
             <div class="navigationButtons">
