--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             </div>
 
             <div>
-                <button class="projectButton" id="projectButtonBottomMiddle" onclick="window.location.href='potion.html';">
-                    <img src="Images/Potion/PotionMainCapsule.png" class="projectImage" alt="Image of broken bridge across water and rocks with various enemies">
-                    <span class="projectButtonText"><b><u>Potion Seller</u></b></span>
+                <button class="projectButton" id="projectButtonBottomMiddle" onclick="window.location.href='jumper.html';">
+                    <img src="Images/Jumper/JumperMainCapsule.png" class="projectImage" alt="Image of broken bridge across water and rocks with various enemies">
+                    <span class="projectButtonText"><b><u>Jumper Project</u></b></span>
                 </button>
             </div>
         </main>
